--- a/index.html
+++ b/index.html
@@ -1,1 +1,275 @@
-Hello World
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Satoshi Ikehata</title>
+<style type="text/css">
+<!--
+body {
+	background: #000000;
+	margin: 0;
+	padding: 0;
+	color: #000;
+	font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS P Gothic", sans-serif;
+	font-size: 12px;
+	line-height: 1.4;
+}
+
+ul, ol, dl {
+	padding: 0;
+	margin: 0;
+}
+.news_table {
+	margin-left: 20px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+h1, h2, h3, h4, h5, h6, p {
+	margin-top: 0;
+	padding-right: 15px;
+	padding-left: 15px;
+}
+a img {
+	border: none;
+}
+
+
+a:link {
+	color:#414958;
+	text-decoration: underline;
+}
+a:visited {
+	color: #4E5869;
+	text-decoration: underline;
+}
+a:hover, a:active, a:focus {
+	text-decoration: none;
+}
+
+
+.container {
+	width: 80%;
+	max-width: 1260px;
+	min-width: 780px;
+	background: #FFF;
+	margin: 0 auto;
+}
+
+
+.header {
+	background-color: #6F7D94;
+	background-image: url(hishi01.gif);
+}
+
+.sidebar1 {
+	float: left;
+	width: 10%;
+	padding-bottom: 10px;
+	background-color: #FFF;
+}
+.session2{
+	color: #FFF;
+	font-size: 12px;
+	background-color: #FFF;
+	text-align: left;
+
+}
+.session {
+	font-size: 12px;
+	background-color: #CCC;
+	text-align: left;
+}
+.content {
+	padding: 10px 0;
+	width: 80%;
+	float: left;
+}
+
+.content ul, .content ol { 
+	padding: 0 15px 15px 40px;
+}
+
+
+ul.nav {
+	list-style: none;
+	border-top: 1px solid #666;
+	margin-bottom: 15px;
+}
+ul.nav li {
+	border-bottom: 1px solid #666;
+}
+ul.nav a, ul.nav a:visited {
+	padding: 5px 5px 5px 15px;
+	display: block;
+	text-decoration: none;
+	background: #8090AB;
+	color: #000;
+}
+ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
+	background: #6F7D94;
+	color: #FFF;
+}
+
+.footer {
+	padding: 10px 0;
+	background: #001F8C;
+	position: relative;
+	clear: both;
+	color: #FFF;
+}
+
+.fltrt {
+	float: right;
+	margin-left: 8px;
+}
+.fltlft {
+	float: left;
+	margin-right: 8px;
+}
+.clearfloat {
+	clear:both;
+	height:0;
+	font-size: 1px;
+	line-height: 0px;
+}
+.image_float_left {
+	float: left;
+	margin-right: 30px;
+	margin-bottom: 30px;
+}
+.table_float {
+	width: 50%;
+}
+.side_table {
+	margin-top: 50px;
+	margin-right: 10px;
+	margin-left: 10px;
+}
+-->
+</style>
+</head>
+
+<body>
+
+<div class="container">
+  <div class="header"><a href="#"><img src="" name="Insert_logo" width="0%" height="25" id="Insert_logo" ; display:block;" /></a> 
+    <!-- end .header --></div>
+  
+  <div class="sidebar1">
+    <table width="10%" border="0" class="side_table">
+  <tr>
+    <td><!-- Satoshi Ikehata --></td>
+  </tr>
+  <tr>
+    <td><!-- Projects--></td>
+  </tr>
+  <tr>
+    <td><!--Codes--></td>
+  </tr>
+  </table>
+
+    <!-- end .sidebar1 --></div>
+  <div class="content">
+    <h1>Welcome to Satoshi Ikehata's Home Page</h1>
+    <p><img src="my_picture.jpg" width="225" height="150" class="image_float_left" /></p>
+    <table width="60%" border="0" class="table_float">
+      <tr>
+        <td align="left"><strong>Satoshi Ikehata, PhD</strong></td>
+      </tr>
+      <tr>
+        <td align="left">Post-Doc Researcher in department of Computer Science and Enginieering, Washington University in St. Louis.</td>
+      </tr>
+      <tr>
+        <td align="left"> Address: Brian Hall, 1 Brookings Drive
+Saint Louis, MO, USA 63130<br /></td>
+      </tr>
+      <tr>
+        <td align="left">Phone: +81-3-5841-6698</td>
+      </tr>
+      <tr>
+        <td align="left">E-mail: sikehata@seas.wustl.edu</td>
+      </tr>
+      <tr>
+        <td height="27" align="left"> (<a href="cv_ikehata.pdf" target="_blank">curriculum vitae</a>) </td>
+      </tr>
+    </table>
+<p>&nbsp;</p>
+<h2 class="session2">About me</h2>
+<p align="left">
+<p>- I have moved to Washington University in St. Louis since June 2014 and been working with <a href='http://www.cse.wustl.edu/~furukawa/', target = "_blank">Dr. Yasutaka Furukawa</a>.
+<p>- I have got my Ph. D in 2014 and MS in 2011 in University of tokyo「nder the supervision of <a href="http://www.hal.t.u-tokyo.ac.jp/~aizawa/index.html" target="_blank">Prof. Kiyoharu Aizawa</a>. </p>
+<p>- Before coming to Aizawa-Yamasaki Lab, I have got my BA of Psychology from the University of Tokyo in 2009 under the supervision of <a href="http://www.l.u-tokyo.ac.jp/psy/sato_ind/index.html" target="_blank">Prof. Takao Sato</a>. </p>
+<p>- I have worked for<a href="http://research.microsoft.com/en-us/groups/vc/" target="_blank"> Visual Computing Group</a> at Microsoft Research Asia as a visiting student in 2011, supervised by <a href="http://research.microsoft.com/en-us/people/yasumat/" target="_blank">Dr. Yasuyuki Matsushita</a>. </p>
+<!--<h2 class="session">News</h2>
+
+<table width="90%" border="0" class="news_table">
+ <tr>
+    <td width="12%">7/2012 </td>
+    <td width="88%">Souce codes of our CVPR2012 work is now available.</td>
+  </tr>
+  <tr>
+    <td width="12%">3/2012 </td>
+    <td width="88%">Our paper accepted at CVPR2012. Pdf is available.</td>
+  </tr>
+  <tr>
+    <td>3/2012</td>
+    <td>Open a new home page.</td>
+  </tr>
+</table>
+-->
+<h3 class="session">Research Interests</h3>
+    <p>3D Scene Reconstruction, Time-of-flight Imaging, Image Super-resolution, Virtual and Augmented Reality, Human Cognition and Perception</p>
+
+<h4 class="session">Selected Papers</h4>  
+<table width="100%" border="0">
+<tr>
+    <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><strong>Structured Indoor Modeling </strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, Hang Yan and Yasutaka Furukawa. In proceedings of IEEE International Conference on Computer Vision (ICCV), 2015 (accepted as an oral presentation) (<a href="structured_modeling.html" target="_blank">project page</a>). </span></td>>
+  </tr>
+<tr>
+    <td><img src="fig_icip2014.bmp" width="192" height="99" class="image_float_left" /> </td>
+    <td><strong>Coarse-to-Fine Strategy for Efficient Cost-Volume Filtering</strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Ryosuke Furuta, Satoshi Ikehata, Toshihiko Yamasaki and Kiyoharu Aizawa. In proceedings of IEEE International Conference on Image Procession(ICIP), 2014 (<a href="icip2014.pdf" target="_blank">paper</a>). </span></td>>
+  </tr>
+<tr>
+    <td><img src="fig_cvpr2014.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><strong>Photometric Stereo using Constrained Bivariate Regression for General Isotropic Surfaces</strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata and Kiyoharu Aizawa. In proceedings of Computer Vision and Pattern Recognition (CVPR), 2014 (accepted as an oral presentation, 5.76%) (<a href="CBRPScvpr2014.pdf" target="_blank">paper</a>, <a href="supp_cvpr2014.pdf" target="_blank">supplementary</a>, <a href="CBR_PS_cvpr2014.zip" target="_blank">source codes</a>). </span></td>>
+  </tr>
+  <tr>
+    <td><img src="fig_pami2014.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><strong>Photometric Stereo using Sparse Bayesian Regression for General Diffuse Surfaces</strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, David Wipf, Yasuyuki Matsushita and Kiyoharu Aizawa. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2014 (accepted) (<a href="preprint_tpami_ps.pdf" target="_blank">preprint</a>). </span></td>
+  </tr>
+  <tr>
+    <td><img src="fig_icip2013.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><strong>Depth Map Inpainting and Super-Resolution based on Internal Statistics of Geometry and Appearance</strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, Ji-Ho Cho and Kiyoharu Aizawa. In proceedings of IEEE International Conference on Image Procession(ICIP), 2013, (<a href="ICIP2013_SR_cm.pdf" target="_blank">pdf</a>). </span></td>>
+  </tr>
+  <tr>
+    <td><img src="fig_ivmsp2013.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><strong>Depth Map Upsampling using Cost-Volume Filtering</strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Ji-Ho Cho, Satoshi Ikehata, Hyunjin Yoo, Margrit Gelautz and Kiyoharu Aizawa. In proceedings of 11th IEEE IVMSP Workshop: 3D Image/Video Technologies and Applications, 2013, (<a href="IVMSP2013_CR.pdf" target="_blank">pdf</a>). </span></td>>
+  </tr>
+  <tr>
+    <td><img src="fig_apsipa.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><strong>Confidence-based Refinement of Corrupted Depth Maps</strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata and Kiyoharu Aizawa.    In proceedings of Signal & Information Processing Association Annual Summit and Conference (APSIPA ASC), 2012, (<a href="ikehata_apsipa2012.pdf" target="_blank">pdf</a>). </span></td>>
+  </tr>
+  <tr>
+    <td><img src="fig_cvpr2012.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><strong>Robust Photometric Stereo using Sparse Regression</strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, David Wipf, Yasuyuki Matsushita, and Kiyoharu Aizawa.    In proceedings of Computer Vision and Pattern Recognition (CVPR), 2012, (<a href="SBLPS_cvpr2012.pdf" target="_blank">pdf</a>, </span></span><a href="SBLPS-supp.pdf" target="_blank">supplementary</a>, <a href="SBLPS_cvpr2012.zip" target="_blank">codes</a>).</td>>
+  </tr>
+</table>
+    
+    
+<h4>&nbsp;</h4>
+  <!-- end .content --></div>
+  <div class="footer">
+    <p>COPYRIGHT 2013-2016, SATOSHI IKEHATA All Rights Reserved.</p>
+  <!-- end .footer --></div>
+<!-- end .container --></div>
+</body>
+</html>
