--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ a:hover, a:active, a:focus {
 	float: left;
 }
 
-.content ul, .content ol { 
+.content ul, .content ol {
 	padding: 0 15px 15px 40px;
 }
 
@@ -152,9 +152,9 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <body>
 
 <div class="container">
-  <div class="header"><a href="#"><img src="" name="Insert_logo" width="0%" height="25" id="Insert_logo" ; display:block;" /></a> 
+  <div class="header"><a href="#"><img src="" name="Insert_logo" width="0%" height="25" id="Insert_logo" ; display:block;" /></a>
     <!-- end .header --></div>
-  
+
   <div class="sidebar1">
     <table width="10%" border="0" class="side_table">
   <tr>
@@ -177,7 +177,8 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
         <td align="left"><strong>Satoshi Ikehata, PhD</strong></td>
       </tr>
       <tr>
-        <td align="left">Post-Doc Researcher in department of Computer Science and Enginieering, Washington University in St. Louis.</td>
+        <td align="left">Assistant Proffesor in National Institute of Informatics, Tokyo, Japan.
+				</td>
       </tr>
       <tr>
         <td align="left"> Address: Brian Hall, 1 Brookings Drive
@@ -196,7 +197,8 @@ Saint Louis, MO, USA 63130<br /></td>
 <p>&nbsp;</p>
 <h2 class="session2">About me</h2>
 <p align="left">
-<p>- I have moved to Washington University in St. Louis since June 2014 and been working with <a href='http://www.cse.wustl.edu/~furukawa/', target = "_blank">Dr. Yasutaka Furukawa</a>.
+<p>- I have moved to National Institute of Informatics in Tokyo, Japan since Apr. 2017.
+<p>- I was post-doc Researcher in department of Computer Science and Enginieering, Washington University in St. Louis from June 2014 to November 2016 and worked with <a href='http://www.cse.wustl.edu/~furukawa/', target = "_blank">Dr. Yasutaka Furukawa</a>.
 <p>- I have got my Ph. D in 2014 and MS in 2011 in University of tokyo「nder the supervision of <a href="http://www.hal.t.u-tokyo.ac.jp/~aizawa/index.html" target="_blank">Prof. Kiyoharu Aizawa</a>. </p>
 <p>- Before coming to Aizawa-Yamasaki Lab, I have got my BA of Psychology from the University of Tokyo in 2009 under the supervision of <a href="http://www.l.u-tokyo.ac.jp/psy/sato_ind/index.html" target="_blank">Prof. Takao Sato</a>. </p>
 <p>- I have worked for<a href="http://research.microsoft.com/en-us/groups/vc/" target="_blank"> Visual Computing Group</a> at Microsoft Research Asia as a visiting student in 2011, supervised by <a href="http://research.microsoft.com/en-us/people/yasumat/" target="_blank">Dr. Yasuyuki Matsushita</a>. </p>
@@ -220,7 +222,7 @@ Saint Louis, MO, USA 63130<br /></td>
 <h3 class="session">Research Interests</h3>
     <p>3D Scene Reconstruction, Time-of-flight Imaging, Image Super-resolution, Virtual and Augmented Reality, Human Cognition and Perception</p>
 
-<h4 class="session">Selected Papers</h4>  
+<h4 class="session">Selected Papers</h4>
 <table width="100%" border="0">
 <tr>
     <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
@@ -263,8 +265,8 @@ Saint Louis, MO, USA 63130<br /></td>
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, David Wipf, Yasuyuki Matsushita, and Kiyoharu Aizawa.    In proceedings of Computer Vision and Pattern Recognition (CVPR), 2012, (<a href="SBLPS_cvpr2012.pdf" target="_blank">pdf</a>, </span></span><a href="SBLPS-supp.pdf" target="_blank">supplementary</a>, <a href="SBLPS_cvpr2012.zip" target="_blank">codes</a>).</td>>
   </tr>
 </table>
-    
-    
+
+
 <h4>&nbsp;</h4>
   <!-- end .content --></div>
   <div class="footer">
