--- a/index.html
+++ b/index.html
@@ -177,12 +177,11 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
         <td align="left"><strong>Satoshi Ikehata, PhD</strong></td>
       </tr>
       <tr>
-        <td align="left">Assistant Proffesor in National Institute of Informatics, Tokyo, Japan.
+        <td align="left">Assistant Proffesor in  <a href="https://www.nii.ac.jp/en/" target="_blank">National Institute of Informatics</a>
 				</td>
       </tr>
       <tr>
-        <td align="left"> Address: Brian Hall, 1 Brookings Drive
-Saint Louis, MO, USA 63130<br /></td>
+        <td align="left"> Address: 2-1-2 Hitotsubashi, Chiyoda-ku, Tokyo 101-8430<br /></td>
       </tr>
       <tr>
         <td align="left">Phone: +81-3-5841-6698</td>
