--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style type="text/css">
 <!--
 body {
-	background: #000000;
+	background: #FFFFFF;
 	margin: 0;
 	padding: 0;
 	color: #000;
@@ -184,10 +184,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
         <td align="left"> Address: 2-1-2 Hitotsubashi, Chiyoda-ku, Tokyo 101-8430<br /></td>
       </tr>
       <tr>
-        <td align="left">Phone: +81-3-5841-6698</td>
-      </tr>
-      <tr>
-        <td align="left">E-mail: sikehata@seas.wustl.edu</td>
+        <td align="left">E-mail: sikehata@nii.ac.jp</td>
       </tr>
       <tr>
         <td height="27" align="left"> (<a href="cv_ikehata.pdf" target="_blank">curriculum vitae</a>) </td>
@@ -199,7 +196,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <p>- I have moved to National Institute of Informatics in Tokyo, Japan since Apr. 2017.
 <p>- I was post-doc Researcher in department of Computer Science and Enginieering, Washington University in St. Louis from June 2014 to November 2016 and worked with <a href='http://www.cse.wustl.edu/~furukawa/', target = "_blank">Dr. Yasutaka Furukawa</a>.
 <p>- I have got my Ph. D in 2014 and MS in 2011 in University of tokyo「nder the supervision of <a href="http://www.hal.t.u-tokyo.ac.jp/~aizawa/index.html" target="_blank">Prof. Kiyoharu Aizawa</a>. </p>
-<p>- Before coming to Aizawa-Yamasaki Lab, I have got my BA of Psychology from the University of Tokyo in 2009 under the supervision of <a href="http://www.l.u-tokyo.ac.jp/psy/sato_ind/index.html" target="_blank">Prof. Takao Sato</a>. </p>
+<p>- I have got my BA of Psychology from the University of Tokyo in 2009 under the supervision of <a href="http://www.l.u-tokyo.ac.jp/psy/sato_ind/index.html" target="_blank">Prof. Takao Sato</a>. </p>
 <p>- I have worked for<a href="http://research.microsoft.com/en-us/groups/vc/" target="_blank"> Visual Computing Group</a> at Microsoft Research Asia as a visiting student in 2011, supervised by <a href="http://research.microsoft.com/en-us/people/yasumat/" target="_blank">Dr. Yasuyuki Matsushita</a>. </p>
 <!--<h2 class="session">News</h2>
 
@@ -269,7 +266,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <h4>&nbsp;</h4>
   <!-- end .content --></div>
   <div class="footer">
-    <p>COPYRIGHT 2013-2016, SATOSHI IKEHATA All Rights Reserved.</p>
+    <p>COPYRIGHT 2013-2018, SATOSHI IKEHATA All Rights Reserved.</p>
   <!-- end .footer --></div>
 <!-- end .container --></div>
 </body>
