--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <h2 class="session2">About me</h2>
 <p align="left">
 <p>- I have moved to National Institute of Informatics in Tokyo, Japan since Apr. 2017.
-<p>- I was post-doc Researcher in department of Computer Science and Enginieering, Washington University in St. Louis from June 2014 to November 2016 and worked with <a href='http://www.cse.wustl.edu/~furukawa/', target = "_blank">Dr. Yasutaka Furukawa</a>.
+<p>- I was a post-doc researcher in department of Computer Science and Enginieering, Washington University in St. Louis from June 2014 to November 2016 and worked with <a href='http://www.cse.wustl.edu/~furukawa/', target = "_blank">Dr. Yasutaka Furukawa</a>.
 <p>- I have got my Ph. D in 2014 and MS in 2011 in University of tokyo「nder the supervision of <a href="http://www.hal.t.u-tokyo.ac.jp/~aizawa/index.html" target="_blank">Prof. Kiyoharu Aizawa</a>. </p>
 <p>- I have got my BA of Psychology from the University of Tokyo in 2009 under the supervision of <a href="http://www.l.u-tokyo.ac.jp/psy/sato_ind/index.html" target="_blank">Prof. Takao Sato</a>. </p>
 <p>- I have worked for<a href="http://research.microsoft.com/en-us/groups/vc/" target="_blank"> Visual Computing Group</a> at Microsoft Research Asia as a visiting student in 2011, supervised by <a href="http://research.microsoft.com/en-us/people/yasumat/" target="_blank">Dr. Yasuyuki Matsushita</a>. </p>
