--- a/index.html
+++ b/index.html
@@ -197,8 +197,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <p>- I have got my Ph. D in 2014 and MS in 2011 in University of tokyo「nder the supervision of <a href="http://www.hal.t.u-tokyo.ac.jp/~aizawa/index.html" target="_blank">Prof. Kiyoharu Aizawa</a>. </p>
 <p>- I have got my BA of Psychology from the University of Tokyo in 2009 under the supervision of <a href="http://www.l.u-tokyo.ac.jp/psy/sato_ind/index.html" target="_blank">Prof. Takao Sato</a>. </p>
 <p>- I have worked for<a href="http://research.microsoft.com/en-us/groups/vc/" target="_blank"> Visual Computing Group</a> at Microsoft Research Asia as a visiting student in 2011, supervised by <a href="http://research.microsoft.com/en-us/people/yasumat/" target="_blank">Dr. Yasuyuki Matsushita</a>. </p>
-<h2 class="session">News</h2>
-
+<h2 class="session">NEWS</h2>
 <table width="90%" border="0" class="news_table">
  <tr>
     <td width="12%">7/2012 </td>
