--- a/index.html
+++ b/index.html
@@ -199,6 +199,22 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <p>- I have worked for<a href="http://research.microsoft.com/en-us/groups/vc/" target="_blank"> Visual Computing Group</a> at Microsoft Research Asia as a visiting student in 2011, supervised by <a href="http://research.microsoft.com/en-us/people/yasumat/" target="_blank">Dr. Yasuyuki Matsushita</a>. </p>
 <h2 class="session">NEWS</h2>
 <table width="90%" border="0" class="news_table">
+<tr>
+	 <td width="12%">8/2018 </td>
+	 <td width="88%">Source codes of ECCV2018 work is now available.</td>
+ </tr>
+<tr>
+	 <td width="12%">7/2014 </td>
+	 <td width="88%">Project page of ICCV2015 work is now available.</td>
+ </tr>
+<tr>
+ 	 <td width="12%">7/2014 </td>
+ 	 <td width="88%">Souce codes of our TPAMI2014 work is now available.</td>
+</tr>
+<tr>
+	 <td width="12%">7/2014 </td>
+	 <td width="88%">Souce codes of our CVPR2014 work is now available.</td>
+ </tr>
  <tr>
     <td width="12%">7/2012 </td>
     <td width="88%">Souce codes of our CVPR2012 work is now available.</td>
@@ -231,12 +247,12 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <tr>
     <td><img src="fig_cvpr2014.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Photometric Stereo using Constrained Bivariate Regression for General Isotropic Surfaces</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata and Kiyoharu Aizawa. In proceedings of Computer Vision and Pattern Recognition (CVPR), 2014 (accepted as an oral presentation, 5.76%) (<a href="CBRPScvpr2014.pdf" target="_blank">paper</a>, <a href="supp_cvpr2014.pdf" target="_blank">supplementary</a>, <a href="CBR_PS_cvpr2014.zip" target="_blank">source codes</a>). </span></td>>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata and Kiyoharu Aizawa. In proceedings of Computer Vision and Pattern Recognition (CVPR), 2014 (accepted as an oral presentation, 5.76%) (<a href="CBRPScvpr2014.pdf" target="_blank">paper</a>, <a href="supp_cvpr2014.pdf" target="_blank">supplementary</a>, <a href="CBRPS_cvpr2014.zip" target="_blank">source codes</a>). </span></td>>
   </tr>
   <tr>
     <td><img src="fig_pami2014.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Photometric Stereo using Sparse Bayesian Regression for General Diffuse Surfaces</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, David Wipf, Yasuyuki Matsushita and Kiyoharu Aizawa. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2014 (accepted) (<a href="preprint_tpami_ps.pdf" target="_blank">preprint</a>). </span></td>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, David Wipf, Yasuyuki Matsushita and Kiyoharu Aizawa. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2014 (<a href="preprint_tpami_ps.pdf" target="_blank">preprint</a>),  <a href="PLSBLPS_pami2014.zip" target="_blank">source codes</a>. </span></td>
   </tr>
   <tr>
     <td><img src="fig_icip2013.png" width="192" height="99" class="image_float_left" /> </td>
