--- a/index.html
+++ b/index.html
@@ -247,12 +247,12 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <tr>
     <td><img src="fig_cvpr2014.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Photometric Stereo using Constrained Bivariate Regression for General Isotropic Surfaces</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata and Kiyoharu Aizawa. In proceedings of Computer Vision and Pattern Recognition (CVPR), 2014 (accepted as an oral presentation, 5.76%) (<a href="CBRPScvpr2014.pdf" target="_blank">paper</a>, <a href="supp_cvpr2014.pdf" target="_blank">supplementary</a>, <a href="CBRPS_cvpr2014.zip" target="_blank">source codes</a>). </span></td>>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata and Kiyoharu Aizawa. In proceedings of Computer Vision and Pattern Recognition (CVPR), 2014 (accepted as an oral presentation, 5.76%) (<a href="CBRPScvpr2014.pdf" target="_blank">paper</a>, <a href="supp_cvpr2014.pdf" target="_blank">supplementary</a>, <a href="https://drive.google.com/open?id=1sTuxhKbgnd7iAsyFOKf5zCMEraORpwNx" target="_blank">source codes</a>). </span></td>>
   </tr>
   <tr>
     <td><img src="fig_pami2014.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Photometric Stereo using Sparse Bayesian Regression for General Diffuse Surfaces</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, David Wipf, Yasuyuki Matsushita and Kiyoharu Aizawa. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2014 (<a href="preprint_tpami_ps.pdf" target="_blank">preprint</a>),  <a href="PLSBLPS_pami2014.zip" target="_blank">source codes</a>. </span></td>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, David Wipf, Yasuyuki Matsushita and Kiyoharu Aizawa. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2014 (<a href="preprint_tpami_ps.pdf" target="_blank">preprint</a>),  <a href="https://drive.google.com/open?id=1VetVYjmniOBBb4YY7xFdHxKAZ7WIkRIY" target="_blank">source codes</a>. </span></td>
   </tr>
   <tr>
     <td><img src="fig_icip2013.png" width="192" height="99" class="image_float_left" /> </td>
@@ -272,7 +272,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
   <tr>
     <td><img src="fig_cvpr2012.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Robust Photometric Stereo using Sparse Regression</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, David Wipf, Yasuyuki Matsushita, and Kiyoharu Aizawa.    In proceedings of Computer Vision and Pattern Recognition (CVPR), 2012, (<a href="SBLPS_cvpr2012.pdf" target="_blank">pdf</a>, </span></span><a href="SBLPS-supp.pdf" target="_blank">supplementary</a>, <a href="SBLPS_cvpr2012.zip" target="_blank">codes</a>).</td>>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, David Wipf, Yasuyuki Matsushita, and Kiyoharu Aizawa.    In proceedings of Computer Vision and Pattern Recognition (CVPR), 2012, (<a href="SBLPS_cvpr2012.pdf" target="_blank">pdf</a>, </span></span><a href="SBLPS-supp.pdf" target="_blank">supplementary</a>, <a href="https://drive.google.com/open?id=19IyBj3oynHXD7VQqX5BhG5l4lXlXhe4V" target="_blank">codes</a>).</td>>
   </tr>
 </table>
 
