--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <tr>
     <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Structured Indoor Modeling </strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, Hang Yan and Yasutaka Furukawa. In proceedings of IEEE International Conference on Computer Vision (ICCV), 2015 (accepted as an oral presentation) (<a href="structured_modeling.html" target="_blank">project page</a>). </span></td>>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, Hang Yan and Yasutaka Furukawa. In proceedings of IEEE International Conference on Computer Vision (ICCV), 2015 (accepted as an oral presentation) (<a href="https://www.cse.wustl.edu/~sikehata/sim/" target="_blank">project page</a>). </span></td>>
   </tr>
 <tr>
     <td><img src="fig_icip2014.bmp" width="192" height="99" class="image_float_left" /> </td>
@@ -252,7 +252,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
   <tr>
     <td><img src="fig_pami2014.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Photometric Stereo using Sparse Bayesian Regression for General Diffuse Surfaces</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, David Wipf, Yasuyuki Matsushita and Kiyoharu Aizawa. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2014 (<a href="preprint_tpami_ps.pdf" target="_blank">preprint</a>),  <a href="https://drive.google.com/open?id=1VetVYjmniOBBb4YY7xFdHxKAZ7WIkRIY" target="_blank">source codes</a>. </span></td>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, David Wipf, Yasuyuki Matsushita and Kiyoharu Aizawa. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2014 (<a href="preprint_tpami_ps.pdf" target="_blank">preprint</a>, <a href="https://drive.google.com/open?id=1VetVYjmniOBBb4YY7xFdHxKAZ7WIkRIY" target="_blank">source codes</a>). </span></td>
   </tr>
   <tr>
     <td><img src="fig_icip2013.png" width="192" height="99" class="image_float_left" /> </td>
