--- a/index.html
+++ b/index.html
@@ -236,6 +236,23 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <table width="100%" border="0">
 <tr>
     <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><strong>Scale Drift Correction of Camera Geo-Localization using Geo-Tagged Images</strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">	Kazuya Iwami, Satoshi Ikehata, Kiyoharu Aizawa. 6th Workshop on Computer Vision for Road Scene Understanding and Autonomous Driving (ECCV2018 Workshop), 2018 (<a href="https://arxiv.org/abs/1808.08544" target="_blank">preprint</a>). </span></td>>
+  </tr>
+<tr>
+<tr>
+    <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><strong>From Bayesian Sparsity to Gated Recurrent Nets</strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Hao He, Bo Xin, Satoshi Ikehata, David P. Wipf. NIPS 2017: 5560-5570, 2017 (<a href="http://papers.nips.cc/paper/7139-from-bayesian-sparsity-to-gated-recurrent-nets" target="_blank">NIPS proceedings</a>). </span></td>>
+  </tr>
+<tr>
+<tr>
+    <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><strong>Panoramic Structure from Motion via Geometric Relationship Detection</strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, Ivaylo Boyadzhiev, Qi Shan, Yasutaka Furukawa.  CoRR abs/1612.01256, 2016 (<a href="https://arxiv.org/abs/1612.01256" target="_blank">arXiv paper</a>). </span></td>>
+  </tr>
+<tr>
+    <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Structured Indoor Modeling </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, Hang Yan and Yasutaka Furukawa. In proceedings of IEEE International Conference on Computer Vision (ICCV), 2015 (accepted as an oral presentation) (<a href="https://www.cse.wustl.edu/~sikehata/sim/" target="_blank">project page</a>). </span></td>>
   </tr>
@@ -252,7 +269,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
   <tr>
     <td><img src="fig_pami2014.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Photometric Stereo using Sparse Bayesian Regression for General Diffuse Surfaces</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, David Wipf, Yasuyuki Matsushita and Kiyoharu Aizawa. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2014 (<a href="preprint_tpami_ps.pdf" target="_blank">preprint</a>, <a href="https://drive.google.com/open?id=1VetVYjmniOBBb4YY7xFdHxKAZ7WIkRIY" target="_blank">source codes</a>). </span></td>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, David Wipf, Yasuyuki Matsushita and Kiyoharu Aizawa. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2014 (<a href="https://drive.google.com/open?id=1VetVYjmniOBBb4YY7xFdHxKAZ7WIkRIY" target="_blank">source codes</a>). </span></td>
   </tr>
   <tr>
     <td><img src="fig_icip2013.png" width="192" height="99" class="image_float_left" /> </td>
