--- a/index.html
+++ b/index.html
@@ -236,26 +236,35 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <table width="100%" border="0">
 <tr>
     <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
-    <td><strong>Scale Drift Correction of Camera Geo-Localization using Geo-Tagged Images</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">	Kazuya Iwami, Satoshi Ikehata, Kiyoharu Aizawa. 6th Workshop on Computer Vision for Road Scene Understanding and Autonomous Driving (ECCV2018 Workshop), 2018 (<a href="https://arxiv.org/abs/1808.08544" target="_blank">preprint</a>). </span></td>>
-  </tr>
+    <td><strong>CNN-PS: CNN-based Photometricc Stereo for General Non-Convex Surfaces.</strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2"> Ryosuke Furuta, Satoshi Ikehata, Toshihiko Yamaskai, Kiyoharu Aizawa.  Multimedia Tools Appl. 77(10): 12469-12491, 2018 (<a href="https://arxiv.org/abs/1808.08544" target="_blank">preprint</a>). </span></td>>
+</tr>
 <tr>
+    <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><strong>Efficiency-enhanced cost-volume filtering featuring coarse-to-fine strategy.</strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2"> Ryosuke Furuta, Satoshi Ikehata, Toshihiko Yamaskai, Kiyoharu Aizawa.  Multimedia Tools Appl. 77(10): 12469-12491, 2018 (<a href="https://arxiv.org/abs/1808.08544" target="_blank">preprint</a>). </span></td>>
+</tr>
+<tr>
+    <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><strong>Scale Drift Correction of Camera Geo-Localization using Geo-Tagged Images</strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2"> Kazuya Iwami, Satoshi Ikehata, Kiyoharu Aizawa. 6th Workshop on Computer Vision for Road Scene Understanding and Autonomous Driving (ECCV2018 Workshop), 2018 (<a href="https://arxiv.org/abs/1808.08544" target="_blank">preprint</a>). </span></td>>
+</tr>
 <tr>
     <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>From Bayesian Sparsity to Gated Recurrent Nets</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Hao He, Bo Xin, Satoshi Ikehata, David P. Wipf. NIPS 2017: 5560-5570, 2017 (<a href="http://papers.nips.cc/paper/7139-from-bayesian-sparsity-to-gated-recurrent-nets" target="_blank">NIPS proceedings</a>). </span></td>>
-  </tr>
-<tr>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Hao He, Bo Xin, Satoshi Ikehata, David P. Wipf. NIPS 2017 (accepted as an oral presentation, 1.20%): 5560-5570, 2017 (<a href="http://papers.nips.cc/paper/7139-from-bayesian-sparsity-to-gated-recurrent-nets" target="_blank">NIPS proceedings</a>). </span></td>>
+</tr>
+
 <tr>
     <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Panoramic Structure from Motion via Geometric Relationship Detection</strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, Ivaylo Boyadzhiev, Qi Shan, Yasutaka Furukawa.  CoRR abs/1612.01256, 2016 (<a href="https://arxiv.org/abs/1612.01256" target="_blank">arXiv paper</a>). </span></td>>
-  </tr>
+</tr>
 <tr>
     <td><img src="fig_iccv2015.png" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Structured Indoor Modeling </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, Hang Yan and Yasutaka Furukawa. In proceedings of IEEE International Conference on Computer Vision (ICCV), 2015 (accepted as an oral presentation) (<a href="https://www.cse.wustl.edu/~sikehata/sim/" target="_blank">project page</a>). </span></td>>
-  </tr>
+</tr>
 <tr>
     <td><img src="fig_icip2014.bmp" width="192" height="99" class="image_float_left" /> </td>
     <td><strong>Coarse-to-Fine Strategy for Efficient Cost-Volume Filtering</strong><br />
